Update favicon link in index.html, adjust package-lock.json for dev dependencies, and enhance form validation in ContactForm.vue. Refactor styles in style.css for RTL support, and update project and service images in respective stores. Improve localization in i18n files and refine various component backgrounds for better consistency.

--- a/src/style.css
+++ b/src/style.css
@@ -720,3 +720,12 @@
 .leaflet-container{
   z-index: 1;
 }
+
+[dir='rtl'] {
+  .arrow-right, .lucide-arrow-right, .lucide-chevron-right {
+    @apply rotate-180;
+  }
+  .lucide-arrow-left, .lucide-chevron-left {
+    @apply -rotate-180;
+  }
+}
